--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -11,7 +13,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
+    "cors": "^2.8.5",
     "framer-motion": "^12.9.1",
+    "mongoose": "^8.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.2",
